--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,21 @@
 
 <build>
     <plugins>
-
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.2.5</version>
             <configuration>
                 <suiteXmlFiles>
-                    <suiteXmlFile>testng.xml</suiteXmlFile>
+                    <suiteXmlFile>
+                        src/test/resources/runner/testng.xml
+                    </suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
-
     </plugins>
 </build>
+
 
   <dependencies>
     <dependency>
